# tuxracer

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  mkinstalldirs  tux.tcl  tuxracer_init.tcl
courses/: course_idx.tcl
courses/1/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/10/: course.tcl  terrain.rgb  trees.rgb
courses/11/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/2/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/3/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/4/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/5/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/6/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/7/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/8/: course.tcl  elev.rgb  terrain.rgb  trees.rgb
courses/9/: course.tcl  trees.rgb
courses/common/: background1.rgb  background2.rgb  background3.rgb  ice.rgb  rock.rgb  snow.rgb  standard_light.tcl  tree.rgb  tree_polyhedron.tcl  tux_moonwalk.tcl  tux_walk.tcl
html/: download.html  faq.html  game_info.html  index.html  manual.html  oldnews.html  support.html  tbtm.html
src/: Makefile.am  Makefile.in  alglib.c  alglib.h  audio.c  audio.h  audio_data.c  audio_data.h  button.c  button.h  course_load.c  course_load.h  course_mgr.c  course_mgr.h  course_quad.cpp  course_quad.h  course_render.c  course_render.h  credits.c  credits.h  debug.c  debug.h  error_util.c  error_util.h  event_select.c  event_select.h  file_util.c  file_util.h  fog.c  fog.h  fonts.c  fonts.h  fps.c  fps.h  game_config.c  game_config.h  game_logic_util.c  game_logic_util.h  game_over.c  game_over.h  (+103 more)
textures/: conditions_button.xcf
