CFLAGS		= -Wall -ansi -pedantic -g @TUXRACER_EXTRA_CFLAGS@ \
		  -I/usr/X11R6/include -I/usr/local/include

bin_PROGRAMS = tuxracer

tuxracer_SOURCES =				\
	alglib.c				\
	alglib.h				\
	course_load.c				\
	course_load.h				\
	course_render.c				\
	course_render.h				\
	debug.c					\
	debug.h					\
	error_util.c				\
	error_util.h				\
	fog.c					\
	fog.h					\
	fps.c					\
	fps.h					\
        game_config.c				\
        game_config.h				\
        game_over.c				\
        game_over.h				\
	gl_util.c				\
	gl_util.h				\
	hier.c					\
	hier.h					\
	hier_cb.c				\
	hier_cb.h				\
	hier_util.c				\
	hier_util.h				\
	image.c					\
	image.h					\
	intro.c					\
	intro.h					\
	keyboard.c				\
	keyboard.h				\
	keyboard_util.c				\
	keyboard_util.h				\
	keyframe.c				\
	keyframe.h				\
	lights.c				\
	lights.h				\
	loop.c					\
	loop.h					\
	main.c					\
	mirror_course.c				\
	mirror_course.h				\
	multiplayer.c				\
	multiplayer.h				\
        nmrcl.c					\
        nmrcl.h					\
	part_sys.c				\
	part_sys.h				\
	phys_sim.c				\
	phys_sim.h				\
	pic.c					\
	pic.h					\
	preview.c				\
	preview.h				\
	racing.c				\
	racing.h				\
	render_util.c				\
	render_util.h				\
	screenshot.c				\
	screenshot.h				\
	start_screen.c				\
	start_screen.h				\
	string_util.c				\
	string_util.h				\
	tcl_util.c				\
	tcl_util.h				\
	textures.c				\
	textures.h				\
	tux.c					\
	tux.h					\
        tux_shadow.c				\
        tux_shadow.h				\
	tux_types.h				\
	tuxracer.h				\
	view.c					\
	view.h
